    <ScrollView     xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">


<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".aBatchManagement" >

    <EditText
        android:id="@+id/BatchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchName"
        android:layout_below="@+id/tvBatchName"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/BatchNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchNotes"
        android:layout_below="@+id/tvBatchNotes"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvBatchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BatchName" />

    <TextView
        android:id="@+id/tvBatchNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BatchName"
        android:layout_below="@+id/BatchName"
        android:text="@string/BatchNotes" />

    <Button
        android:id="@+id/bExtractRecipie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchStatus"
        android:layout_below="@+id/bStartBatch"
        android:text="@string/ExtractRecipieFromBatch" />

    <Button
        android:id="@+id/bFetchBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchStatus"
        android:layout_below="@+id/bExtractRecipie"
        android:text="@string/FetchBatchData" />

    <Button
        android:id="@+id/bDeleteBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchStatus"
        android:layout_below="@+id/bFetchBatch"
        android:text="@string/DeleteBatchData" />

    <Button
        android:id="@+id/bEndBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bStartBatch"
        android:layout_alignBottom="@+id/bStartBatch"
        android:layout_alignRight="@+id/bExtractRecipie"
        android:text="@string/EndBatch" />

    <TextView
        android:id="@+id/tvBatchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/BatchNotes"
        android:layout_below="@+id/BatchNotes"
        android:height="30dp"
        android:text="@string/BatchStatus"
        android:width="150dp" />

    <Button
        android:id="@+id/bStartBatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBatchStatus"
        android:layout_below="@+id/tvBatchStatus"
        android:text="@string/StartBatch" />

</RelativeLayout>
</ScrollView>
