    <ScrollView     xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".aBioController" >

    <Button
        android:id="@+id/Connect"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:height="50dp"
        android:onClick="mConnect"
        android:text="@string/connect"
        android:width="150dp" />
    
    <Button
        android:id="@+id/Charts"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Connect"
        android:layout_below="@+id/Connect"
        android:clickable="false"
        android:height="50dp"
        android:onClick="mCharts"
        android:text="@string/charts"
        android:textColor="@android:color/white"
        android:width="150dp" />
    
    <Button
        android:id="@+id/bBatchManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Charts"
        android:layout_below="@+id/Charts"
        android:clickable="false"
        android:height="50dp"
        android:onClick="mBatchManagement"
        android:text="@string/BatchManagement"
        android:textColor="@android:color/white"
        android:width="150dp" />

    <Button
        android:id="@+id/Recipies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bBatchManagement"
        android:layout_below="@+id/bBatchManagement"
        android:clickable="false"
        android:height="50dp"
        android:onClick="mRecipieManagement"
        android:text="@string/recipies"
        android:textColor="@android:color/white"
        android:width="150dp" />

    <Button
        android:id="@+id/System"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Recipies"
        android:layout_below="@+id/Recipies"
        android:clickable="false"
        android:height="50dp"
        android:onClick="mSystem"
        android:text="@string/system"
        android:textColor="@android:color/white"
        android:width="150dp" />


    <TextView
        android:id="@+id/SystemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/System"
        android:layout_below="@+id/System"
        android:background="@android:color/white"
        android:height="100dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:text="@string/systemStatus"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:width="400dp" />
    
</RelativeLayout>
</ScrollView>
