<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/connectmenu"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        tools:context=".aConnect" >

        <RadioGroup
            android:id="@+id/rgControllerList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="37dp" >
        </RadioGroup>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgControllerList"
            android:text="@string/username" />

        <TextView
            android:id="@+id/PIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/password"
            android:text="@string/PIN" />

        <TextView
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/username"
            android:layout_below="@+id/name"
            android:text="@string/password" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/PIN"
            android:layout_below="@+id/username"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_below="@+id/pwd"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/BTPIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/PIN"
            android:ems="10"
            android:inputType="number"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/Bluetooth"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/BTPIN"
            android:layout_below="@+id/BTPIN"
            android:onClick="mBluetooth"
            android:text="Connect" />

    </RelativeLayout>

</ScrollView>